--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Icons -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
 <!-- Styles -->
-<link href="css/styles.css" rel="stylesheet"/>
+<link href="styles.css" rel="stylesheet"/>
 <style>
 /* SONER Logo Animation */
 @keyframes sonerScan { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
@@ -436,7 +436,7 @@
 </div>
 </div>
 <!-- Scripts -->
-<script src="js/calculator.js"></script>
-<script src="js/ui.js"></script>
+<script src="calculator.js"></script>
+<script src="ui.js"></script>
 </body>
 </html>
